ribbit/tests/ui/overflow_implicit.stderr
error: Field requires 64 bits at offset 32, but only 32 are available
 --> tests/ui/overflow_implicit.rs:5:5
  |
5 |     b: u64,
  |     ^
