ribbit/tests/ui/overflow_implicit.rs
#[ribbit::pack(size = 64)]
#[derive(Clone)]
struct Foo {
    a: u32,
    b: u64,
}

fn main() {}
